--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,3 +7,10 @@
 body{
     font-family: sans-serif;
 }
+
+/* Contenedor */
+.contenedor{
+    margin: 0 auto;
+    width: 90%;
+    max-width: 1000px;
+}
