--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -6,7 +6,7 @@
 
 body{
     font-family: sans-serif;
-    background-color: #9c9c9c;
+    background-color: rgba(156, 156, 156, .3);
 }
 
 /* Contenedor */
