--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -14,6 +14,9 @@ body{
     margin: 0 auto;
     width: 90%;
     max-width: 1000px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 /* Header y Menu */
@@ -73,4 +76,23 @@ header nav a:hover{
     margin-bottom: 20px;
     font-size: 16px;
     text-align: justify;
+}
+
+/* Aside */
+aside{
+    width: 30%;
+    background-color: #6499E7;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+aside .ad{
+    font-size: 30px;
+    text-align: center;
+    color: #fff;
+    padding: 50px;
+    background-color: #8E9CD3;
+    border-radius: 8px;
 }
